added authors collection and its get request
