# routes/index.js
@@ -2,5 +2,6 @@ const router = require('express').Router();
 
 router.use('/', require('./swagger'));
 router.use('/recipes', require('./recipes'));
+router.use('/authors', require('./authors'));
 
 module.exports = router;
